# ros2_task

./: README.md
show_dog_ws/src/show_dog/urdf/: dog.urdf
src/auto_partol_package/: setup.cfg  setup.py
src/auto_partol_package/auto_partol_package/: auto_patrol.py
src/auto_partol_package/config/: patrol_config.yaml
src/calculate_num_interfaces/: CMakeLists.txt  package.xml
src/calculate_num_interfaces/msg/: Calculate.msg
src/example_cpp/: CMakeLists.txt  package.xml
src/example_cpp/src/: pub_num.cpp  sub_num.cpp  test.cpp
src/exemple/: package.xml  setup.cfg  setup.py
src/exemple/exemple/: pub_num.py  sub_num.py  test.py
src/nav_auto/: setup.py
src/robot_description/: package.xml
src/robot_description/launch/: display_gazebo.launch.py
src/robot_description/urdf/easy_robot/: easy_robot.xacro
src/task3_navigation2/: CMakeLists.txt
src/task3_navigation2/config/: nav2_params.yaml
src/task3_navigation2/launch/: navigation2.launch.py
src/task3_navigation2/maps/: map.pgm  map.yaml
task3_ws/src/auto_partol_package/: package.xml  setup.py
task3_ws/src/auto_partol_package/auto_partol_package/: auto_patrol_full.py  autopartol.py
task3_ws/src/auto_partol_package/config/: partol_config.yaml
task3_ws/src/nav_auto/: package.xml  setup.cfg
task3_ws/src/nav_auto/nav_auto/: nav_auto_location.py
task3_ws/src/robot_description/: CMakeLists.txt
task3_ws/src/robot_description/config/: robot_to_rviz.rviz
task3_ws/src/robot_description/launch/: display_robot.launch.py
task3_ws/src/robot_description/world/: world  world.world
task3_ws/src/task3_navigation2/: package.xml
task3_ws/src/task3_navigation2/launch/: my_bringup_launch.py  (+2 more)
(+8 files in other folders)
